examples/tests/compile_fail/module_header_invalid_fail.zl
module net.http

fun main() >> i32 {
    return 0;
}
